配置了Spring.NET 注意事项： 1.xml文件的xmlns指向的地址不可有错 2.DI注入的属性和值不得有误

--- a/LRS.OA.Web/Web.config
+++ b/LRS.OA.Web/Web.config
@@ -5,9 +5,24 @@
   -->
 <configuration>
   <configSections>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!--Spring.NET配置节信息-->
+    <sectionGroup name="spring">
+      <!--Spring.Net配置-->
+      <section name="context" type="Spring.Context.Support.MvcContextHandler, Spring.Web.Mvc4"/>
+    </sectionGroup>
+    <!--Spring.NET配置节信息END-->
   </configSections>
+  <!--Spring配置信息-->
+  <spring>
+    <!--Spring.Net配置-->
+    <context>
+      <resource uri="file://~/Config/controllers.xml"/>
+      <resource uri="file://~/Config/services.xml"/>
+    </context>
+  </spring>
+  <!--Spring配置信息End-->
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-LRS.OA.Web-20180711161001;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-LRS.OA.Web-20180711161001.mdf" />
     <add name="OAEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=OA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
