--- a/LRS.OA.Web/Web.config
+++ b/LRS.OA.Web/Web.config
@@ -10,25 +10,56 @@
     <!--Spring.NET配置节信息-->
     <sectionGroup name="spring">
       <!--Spring.Net配置-->
-      <section name="context" type="Spring.Context.Support.MvcContextHandler, Spring.Web.Mvc4"/>
+      <section name="context" type="Spring.Context.Support.MvcContextHandler, Spring.Web.Mvc4" />
     </sectionGroup>
     <!--Spring.NET配置节信息END-->
+
+    <!--Log4net配置-->
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+    <!--Log4net配置END-->
   </configSections>
   <!--Spring配置信息-->
   <spring>
     <!--Spring.Net配置-->
     <context>
-      <resource uri="file://~/Config/controllers.xml"/>
-      <resource uri="file://~/Config/services.xml"/>
+      <resource uri="file://~/Config/controllers.xml" />
+      <resource uri="file://~/Config/services.xml" />
     </context>
   </spring>
   <!--Spring配置信息End-->
+  <!--Log4net配置-->
+  <log4net>
+    <root>
+      <level value="ERROR"/>
+      <appender-ref ref="SysAppender"/>
+    </root>
+    <logger name="WebLogger">
+      <level value="ERROR"/>
+    </logger>
+    <appender name="SysAppender" type="log4net.Appender.RollingFileAppender,log4net" >
+      <param name="File" value="App_Data/" />
+      <param name="AppendToFile" value="true" />
+      <param name="RollingStyle" value="Date" />
+      <param name="DatePattern" value="&quot;Logs_&quot;yyyyMMdd&quot;.txt&quot;" />
+      <param name="StaticLogFileName" value="false" />
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
+        <param name="Header" value="&#13;&#10;----------------------header--------------------------&#13;&#10;" />
+        <param name="Footer" value="&#13;&#10;----------------------footer--------------------------&#13;&#10;" />
+      </layout>
+    </appender>
+    <appender name="consoleApp" type="log4net.Appender.ConsoleAppender,log4net">
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
+      </layout>
+    </appender>
+  </log4net>
+  <!--Log4netEND-->
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-LRS.OA.Web-20180711161001;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-LRS.OA.Web-20180711161001.mdf" />
     <add name="OAEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=OA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-
   </connectionStrings>
-  
+
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
